--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name=”keywords” content=”Ruby,Ruby on Rails,プログラミング,web”>
+    <meta name="keywords" content="Ruby,Ruby on Rails,プログラミング,web">
     <title>Tomoya Matsuura Portfolio</title>
     
     <!-- BootstrapのCSS読み込み -->
